# lottery7

./: .gitignore  Jenkinsfile  README.md  build.sh  lottery_draw_gap.sql  lottery_number_triplet_counts.sql  lottery_scraper.py  pyproject.toml  requirements.txt
app/: Dockerfile  go.mod  go.sum  index.html  main.go
app/config/: config.dev.yaml  config.prod.yaml
app/crypto/: aes.go  aes_test.go
app/dto/: lottery_dto.go
app/handler/: license_handler.go  lottery_handler.go
app/models/: license_key.go  lottery_result.go
app/router/: router.go
app/service/: license_service.go  license_service_test.go  lottery_service.go
